.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unity-webgl
  namespace: unity-webgl-k8s
spec:
  type: ClusterIP
  selector:
    app: unity-webgl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
