.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unity-webgl-k8s-ingress
  namespace: unity-webgl-k8s
spec:
  ingressClassName: nginx
  rules:
  - host: unity-webgl-k8s.cseteram.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: unity-webgl
            port:
              number: 80
